Add WhatsApp chat button to index.html
Added a WhatsApp chat button for the Director of Academics.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Splendid's Academy | Exam Portal</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap');
@@ -110,5 +111,9 @@
     </div>
 
     <footer class="mt-12 text-center text-gray-400 text-xs font-medium"><p>© 2026 Faculty of Basic Medical Sciences.<br>Built by 0'24 SPAN Director of Academics.</p></footer>
+    <a href="https://wa.me/2348124991400" target="_blank" class="fixed bottom-6 right-6 bg-green-500 text-white p-4 rounded-full shadow-2xl hover:bg-green-600 transition-all transform hover:scale-110 z-50 flex items-center gap-2 group">
+        <i class="fab fa-whatsapp text-2xl"></i>
+        <span class="max-w-0 overflow-hidden group-hover:max-w-xs transition-all duration-500 ease-in-out whitespace-nowrap font-bold text-sm">Chat with Director</span>
+    </a>
 </body>
 </html>
