Add navigation to Director's Profile in index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     </style>
 </head>
 <body class="min-h-screen flex flex-col items-center py-12 px-4">
+    <nav class="absolute top-4 right-4">
+    <a href="profile.html" class="flex items-center gap-2 bg-white px-3 py-1 rounded-full shadow-sm hover:shadow-md transition text-xs font-bold text-gray-600 border border-gray-100">
+        <img src="profile.jpg" class="w-6 h-6 rounded-full bg-gray-200 object-cover" alt="Director">
+        <span>Director's Profile</span>
+    </a>
+    </nav>
     <div class="text-center mb-12">
         <div class="inline-block p-4 bg-white rounded-full shadow-md mb-4 text-5xl">🩺</div>
         <h1 class="text-4xl font-extrabold text-gray-900 tracking-tight mb-2">Splendid's Academy</h1>
