Add 'Case of the Week' section to index.html
Added a new 'Case of the Week' section with a link to clinical.html.

--- a/index.html
+++ b/index.html
@@ -124,6 +124,18 @@
         </a>
 
     </div>
+    <a href="clinical.html" class="group block bg-teal-600 rounded-2xl p-6 shadow-lg transform hover:-translate-y-1 transition-all">
+    <div class="flex items-center justify-between">
+        <div class="flex items-center gap-4">
+            <div class="bg-teal-700 p-3 rounded-full text-2xl text-white">🩺</div>
+            <div>
+                <h3 class="text-white font-bold text-lg">Case of the Week</h3>
+                <p class="text-teal-100 text-xs">Test your diagnosis skills</p>
+            </div>
+        </div>
+        <div class="text-teal-900 font-bold text-sm bg-white/20 px-3 py-2 rounded-lg group-hover:bg-white/30 transition-colors">Solve ➜</div>
+    </div>
+    </a>
 
     <footer class="mt-12 text-center text-gray-400 text-xs font-medium"><p>© 2026 Faculty of Basic Medical Sciences.<br>Built by 0'24 SPAN Director of Academics.</p></footer>
     <a href="https://wa.me/2348124991400" target="_blank" class="fixed bottom-6 right-6 bg-green-500 text-white p-4 rounded-full shadow-2xl hover:bg-green-600 transition-all transform hover:scale-110 z-50 flex items-center gap-2 group">
