--- a/dashboard.html
+++ b/dashboard.html
@@ -61,7 +61,7 @@
             <a href="notes.html" onclick="alert('Coming in Phase 5!')" class="flex items-center gap-3 px-4 py-3 text-slate-300 hover:bg-slate-800 hover:text-white rounded-xl transition-colors">
                 <i class="fas fa-book-open w-6 text-emerald-400"></i> Lecture Notes
             </a>
-            <a href="#" onclick="alert('Coming in Phase 5!')" class="flex items-center gap-3 px-4 py-3 text-slate-300 hover:bg-slate-800 hover:text-white rounded-xl transition-colors">
+            <a href="cbt.html" onclick="alert('Coming in Phase 5!')" class="flex items-center gap-3 px-4 py-3 text-slate-300 hover:bg-slate-800 hover:text-white rounded-xl transition-colors">
                 <i class="fas fa-laptop-code w-6 text-blue-400"></i> CBT Assessments
             </a>
             <a href="#" onclick="alert('Coming in Phase 5!')" class="flex items-center gap-3 px-4 py-3 text-slate-300 hover:bg-slate-800 hover:text-white rounded-xl transition-colors">
