--- a/dashboard.html
+++ b/dashboard.html
@@ -64,13 +64,13 @@
             <a href="cbt.html" onclick="alert('Coming in Phase 5!')" class="flex items-center gap-3 px-4 py-3 text-slate-300 hover:bg-slate-800 hover:text-white rounded-xl transition-colors">
                 <i class="fas fa-laptop-code w-6 text-blue-400"></i> CBT Assessments
             </a>
-            <a href="#" onclick="alert('Coming in Phase 5!')" class="flex items-center gap-3 px-4 py-3 text-slate-300 hover:bg-slate-800 hover:text-white rounded-xl transition-colors">
+            <a href="clinical.html" class="flex items-center gap-3 px-4 py-3 text-slate-300 hover:bg-slate-800 hover:text-white rounded-xl transition-colors">
                 <i class="fas fa-microscope w-6 text-purple-400"></i> Clinical Cases
             </a>
 
             <p class="text-[10px] font-bold text-slate-500 uppercase tracking-widest mt-6 mb-2 px-4">Tools</p>
             
-            <a href="calculator.html" onclick="alert('Coming in Phase 5!')" class="flex items-center gap-3 px-4 py-3 text-slate-300 hover:bg-slate-800 hover:text-white rounded-xl transition-colors">
+            <a href="calculator.html" class="flex items-center gap-3 px-4 py-3 text-slate-300 hover:bg-slate-800 hover:text-white rounded-xl transition-colors">
                 <i class="fas fa-calculator w-6 text-yellow-400"></i> GP Forecaster
             </a>
             <a href="#" onclick="alert('Coming in Phase 5!')" class="flex items-center gap-3 px-4 py-3 text-slate-300 hover:bg-slate-800 hover:text-white rounded-xl transition-colors">
