--- a/dashboard.html
+++ b/dashboard.html
@@ -65,7 +65,7 @@
             <a href="notes.html" class="flex items-center gap-3 px-4 py-3 text-slate-300 hover:bg-slate-800 hover:text-white rounded-xl transition-colors">
                 <i class="fas fa-book-open w-6 text-emerald-400"></i> Lecture Notes
             </a>
-            <a href="cbt.html" class="flex items-center gap-3 px-4 py-3 text-slate-300 hover:bg-slate-800 hover:text-white rounded-xl transition-colors">
+            <a href="hub.html" class="flex items-center gap-3 px-4 py-3 text-slate-300 hover:bg-slate-800 hover:text-white rounded-xl transition-colors">
                 <i class="fas fa-laptop-code w-6 text-blue-400"></i> CBT Assessments
             </a>
             <a href="clinical.html" class="flex items-center gap-3 px-4 py-3 text-slate-300 hover:bg-slate-800 hover:text-white rounded-xl transition-colors">
