--- a/notes.html
+++ b/notes.html
@@ -75,6 +75,17 @@
                 </a>
             </div>
 
+            <div class="course-card bg-white p-5 rounded-xl shadow-sm border-l-4 border-red-500 flex items-center justify-between group" data-tags="phs 213 physiology cell membrane transport">
+                <div>
+                    <div class="text-[10px] font-bold text-red-500 uppercase tracking-widest mb-1">Physiology</div>
+                    <h3 class="font-bold text-slate-800 text-lg">PHS 214</h3>
+                    <p class="text-xs text-slate-400">Practical PHYSIOLOGY (lab 🧫)</p>
+                </div>
+                <a href="https://drive.google.com/drive/folders/YOUR_PHS_213_LINK" target="_blank" class="bg-slate-100 text-slate-600 h-10 w-10 rounded-full flex items-center justify-center hover:bg-red-600 hover:text-white transition-colors">
+                    <i class="fas fa-folder-open"></i>
+                </a>
+            </div>
+
             <div class="course-card bg-white p-5 rounded-xl shadow-sm border-l-4 border-blue-500 flex items-center justify-between group" data-tags="ana 211 anatomy gross limb bone">
                 <div>
                     <div class="text-[10px] font-bold text-blue-500 uppercase tracking-widest mb-1">Anatomy</div>
