--- a/notes.html
+++ b/notes.html
@@ -79,7 +79,7 @@
                 <div>
                     <div class="text-[10px] font-bold text-red-500 uppercase tracking-widest mb-1">Physiology</div>
                     <h3 class="font-bold text-slate-800 text-lg">PHS 214</h3>
-                    <p class="text-xs text-slate-400">Practical PHYSIOLOGY (lab 🧫)</p>
+                    <p class="text-xs text-slate-400">Practical PHYSIOLOGY (Miriam)</p>
                 </div>
                 <a href="https://drive.google.com/drive/folders/YOUR_PHS_213_LINK" target="_blank" class="bg-slate-100 text-slate-600 h-10 w-10 rounded-full flex items-center justify-center hover:bg-red-600 hover:text-white transition-colors">
                     <i class="fas fa-folder-open"></i>
