--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             storageBucket: "splendids-academy-v2.firebasestorage.app",
             messagingSenderId: "573697150601",
             appId: "1:573697150601:web:74c556c85b6be053018058",
-            measurementId: "G-VVDT1PMHNX"
+            measurementId: "G-VBNBLV0DSS"
         };
 
         // Initialize
